# tevico-community

./: .gitignore  AZURE_INTEGRATION.md  CONTRIBUTING.md  LICENSE  README.md  main  package-lock.json  pyproject.toml  run.sh  test_azure_provider.py  test_provider_discovery.py  tevico
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature-request.yml
framework/cli/: arg_parser.py
framework/engine/: framework.py  handler.py
framework/engine/configs/: config.py
framework/engine/core/: utils.py
framework/engine/entities/check/: check.py
new_env/: pyvenv.cfg
scripts/: convert_prowler_metadata.py
tests/: ec2_elastic_ips_unassociated.py  test_apigateway_unused_stages.py  test_check_lambda_deprecated_runtime.py  test_ec2_check.py  test_ec2_detailed_monitoring.py  test_ec2_elastic_ips_unassociated.py  test_route53_health_checks_status.py  test_sqs_kms_encryption_at_rest_enabled.py  test_start_execution.py
tests/acl/: test_acl_bidirectional_traffic_restriction_check.py
tests/amc/: test_acm_certificates_expiration_check.py
tevico/cli/: arg_parser.py  cli.py
tevico/engine/: framework.py  handler.py
tevico/engine/configs/: config.py
tevico/engine/core/: enums.py  utils.py
tevico/report/: .gitignore  app.js  browse-page.js  browse.html  check-details-page.js  check-details.html  index.html  well-architected-review.html  well-architected-review.js
tevico/report/utils/: utils.js
tevico/templates/: check_data.jinja2  check_metadata.jinja2  check_python.jinja2  framework_metadata.jinja2  profile_metadata.jinja2
(+19 files in other folders)
