[tool.poetry]
name = "tevico"
version = "0.1.0"
description = "Extensible infrastructure governing framework"
authors = ["Abhay Pai <abhaypai2611@gmail.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
pydantic = "^2.7.4"
pyyaml = "^6.0.2"
boto3 = "1.37.18"
detect-secrets = "^1.5.0"
pytest = "^8.3.2"
# Azure SDK dependencies - using conservative versions
azure-identity = "^1.12.0"
azure-mgmt-resource = "^22.0.0"
azure-mgmt-compute = "^29.0.0"
azure-mgmt-storage = "^20.0.0"
azure-mgmt-keyvault = "^9.0.0"
azure-mgmt-sql = "^3.0.1"
azure-mgmt-subscription = "^3.0.0"
azure-mgmt-recoveryservicesbackup = "^6.0.0"


[tool.poetry.group.dev.dependencies]
moto = "^5.0.13"
pytest = "^8.3.2"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
